# rss2ics

./: .gitignore  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  vercel.json
api/: gen.py
tests/: test-api.py  test_api.py
