[project]
name = "rss2ics"
version = "3.2.2"
description = "Convert Atom/RSS feed into iCalendar"
keywords = ["converter", "icalendar", "ics", "serverless"]
requires-python = ">=3.12"
authors = [{ name = "Vinfall" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Framework :: Pytest",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Private :: Do Not Upload",
]
dependencies = [
    "dateparser>=1.2.2",
    "feedparser>=6.0.11",
    "Flask>=3.1.1",
    "ics==0.8.0.dev0",
    "pytz>=2025.2",
    "regex==2025.7.34",
]
[project.optional-dependencies]
test = ["pytest>=8.3.4"]

[project.urls]
homepage = "https://github.com/Vinfall/rss2ics"

# Linter
[tool.pylint]
disable = ["missing-module-docstring", "missing-function-docstring", "no-else-return"]
